test/analysis/accept/map-simple-variant.ptk
rule basic = "hello" => field: `code`;