test/analysis/reject/duplicate-undeclared-start.ptk
# expected: E1303, E1306

start <magic>;

rule magic = "magic";

start <no_disco>;

